feat: cashed hotels api (for seamless page reload)
