# src/controllers/ProxyController.ts
@@ -53,6 +53,21 @@ export class ProxyController {
       next(e);
     }
   }
+
+  public async getAccommodation(
+    req: AuthRequest,
+    res: Response,
+    next: NextFunction
+  ) {
+    try {
+      const { accommodationId } = req.params;
+      const data = await proxyService.getAccommodation(accommodationId);
+
+      res.json(data);
+    } catch (e) {
+      next(e);
+    }
+  }
 }
 
 export default new ProxyController();
