# src/router/proxy.ts
@@ -6,4 +6,5 @@ export default (router: Router): void => {
   router.post('/hotels/offers/:offerId/price', proxyController.offerPrice);
 
   router.get('/hotels/offers/:offerId/price', proxyController.getPricedOffer);
+  router.get('/hotels/:accommodationId', proxyController.getAccommodation);
 };
